--- a/plugins/EntryFileDrop/config.yaml
+++ b/plugins/EntryFileDrop/config.yaml
@@ -4,7 +4,7 @@ key: EntryFileDrop
 author_link: http://www.movabletype.org/
 author_name: Six Apart
 description: Enabling file drop in the edit entry page
-version: 1.00
+version: 1.10
 plugin_link: http://www.movabletype.org/
 
 applications:
@@ -14,3 +14,10 @@ applications:
             asset_tags_dialog: '$EntryFileDrop::EntryFileDrop::asset_tags_dialog'
         callbacks:
             template_param.edit_entry: '$EntryFileDrop::EntryFileDrop::install_dropzone'
+
+settings:
+    suggested_tags:
+        default:
+        scope: blog
+
+blog_config_template: suggested_tags.tmpl
